# plugin_Electromagnetism

./: CMakeLists.txt  LICENSE  README.md  em_material.h  em_material_impl.h  em_plugin.cpp  memreduce.h  nedelec_aux_cmd.h  nedelec_aux_cmd_impl.h  nedelec_dirichlet.h  nedelec_dirichlet_impl.h  nedelec_encode.h  nedelec_gf_user_data.h  nedelec_local_ass.h  nedelec_local_ass_impl.h  nedelec_project.h  nedelec_project_impl.h  nedelec_source.h  nedelec_source_impl.h  nedelec_transfer.h  nedelec_transfer_impl.h
EddyCurrent_E_Nedelec/: eddy_current_cmd.h  eddy_current_cmd_impl.h  eddy_current_e_nedelec.h  eddy_current_e_nedelec_impl.h  eddy_current_gf_user_data.h  eddy_current_traits.h  hiptmair_hybrid_smoother.h  hiptmair_hybrid_smoother_impl.h
doc/: doxy_em_config.txt
